--- a/default.project.json
+++ b/default.project.json
@@ -1,7 +1,6 @@
 {
-  "name": "ui-previewer-plugin",
+  "name": "ui-previewer",
   "tree": {
-    "$className": "Folder",
     "$path": "src"
   }
 }
